
This document provides a transcript of release notes and user-visible
changes for each release of BRL-CAD.  The individual changes are
listed in chronological order with the most recent changes listed
first and are grouped by release.  Each release also includes optional
descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 20XX-XX-XX  Release 7.30.6                                     ---
----------------------------------------------------------------------

* fixed transparent drawing in MGED - Nick Reed
* fixed solid NURBS brep intersection testing - Cliff Yapp
* removed extra blank line after commands in MGED GUI - Sean Morrison
* added "plate" object type filter to search command - Cliff Yapp
* fixed latent logging bug during facetize on Windows - Bob Parker
* fixed bug closing rt framebuffer windows on Windows - Sean Morrison


----------------------------------------------------------------------
--- 2019-12-05  Release 7.30.4                                     ---
----------------------------------------------------------------------

* enhanced attr list command to support reporting values - Cliff Yapp
* updated FAA Generic Twin example FASTGEN model - Cliff Yapp
* fixed handling of duplicate FASTGEN object names - Cliff Yapp
* update gqa/rtweight man pages to reference mater -d - Cliff Yapp
* overlay command accepts file patterns (e.g., *.plot) - Cliff Yapp
* changed mged escape key binding to reset mouse mode - Sean Morrison
* removed default xXyYzZ0 rate rotation key bindings - Sean Morrison
* improved tessellation of nearly coplanar surfaces - John Anderson
* fixed display of annotations on Windows - Daniel Roßberg
* fixed rtedge and rtwizard occlusion object edge bug - Sean Morrison
* rt* tools no longer force outputs to be read-only - Sean Morrison