@@ -10,7 +10,14 @@ descriptive text that emphasizes or further describes significant
 changes made.  See document footer for additional details.
 
 
+-----------------------------------------------------------------------
+--- 20XX-XX-XX  Release 7.XX.X                                     ---
 ----------------------------------------------------------------------
+
+* add .r suffixes to region names in 3dm-g conversion - Cliff Yapp
+
+
+---------------------------------------------------------------------
 --- 20XX-XX-XX  Release 7.30.6                                     ---
 ----------------------------------------------------------------------
 
